Add structs for common responses to improve swagger
